--- a/Tengu/App.axaml
+++ b/Tengu/App.axaml
@@ -8,6 +8,7 @@
 			<ResourceDictionary.MergedDictionaries>
 				<ResourceInclude Source='/Resources/Icons.axaml'/>
 				<ResourceInclude Source='/Resources/Itachi.axaml'/>
+				<ResourceInclude Source='/Resources/Killua.axaml'/>
 			</ResourceDictionary.MergedDictionaries>
 		</ResourceDictionary>
 	</Application.Resources>
