added info bar service

--- a/Tengu/Views/MainWindow.axaml
+++ b/Tengu/Views/MainWindow.axaml
@@ -119,6 +119,9 @@
 
 		<Panel Grid.Row="1">
 			<ui:Frame Name="FrameView"/>
+
+			<ui:InfoBar Title="Title" IsOpen="True" Severity="Informational" Message="Essential app message for your users to be informed of, acknowledge, or take action on." 
+						VerticalAlignment="Bottom"/>
 		</Panel>
 	</Grid>
 
