added badge to Downloads tab

--- a/Tengu/Views/MainWindow.axaml
+++ b/Tengu/Views/MainWindow.axaml
@@ -123,6 +123,13 @@
 							</ui:NavigationViewItem>
 						</ui:NavigationViewItem.MenuItems>
 					</ui:NavigationViewItem>
+					<ui:NavigationViewItem Content="Downloads">
+						<ui:NavigationViewItem.InfoBadge>
+							<ui:InfoBadge Value="{Binding DwnldService.DownloadCount}"
+										  IsVisible="{Binding DwnldService.DownloadCount}"
+										  Opacity="1" />
+						</ui:NavigationViewItem.InfoBadge>
+					</ui:NavigationViewItem>
 				</ui:NavigationView.MenuItems>
 			</ui:NavigationView>
 
