--- a/Tengu/Views/SearchControl.axaml
+++ b/Tengu/Views/SearchControl.axaml
@@ -66,7 +66,11 @@
 							<DrawingGroup>
 								<DrawingGroup Opacity="1">
 									<DrawingGroup Opacity="1">
-										
+										<!--<GeometryDrawing Brush="#5b9374" Geometry="{StaticResource YatoBkg}" />-->
+										<GeometryDrawing Brush="#2d2b2f" Geometry="{StaticResource Yato1}" />
+										<GeometryDrawing Brush="#fad3ab" Geometry="{StaticResource Yato2}" />
+										<GeometryDrawing Brush="#442c5c" Geometry="{StaticResource Yato3}" />
+										<GeometryDrawing Brush="#fcfcfc" Geometry="{StaticResource Yato4}" />
 									</DrawingGroup>
 								</DrawingGroup>
 							</DrawingGroup>
@@ -77,7 +81,6 @@
 		</Grid>
 
 		<Grid RowDefinitions="Auto,Auto,*"
-			  Grid.ColumnSpan="2"
 			  Margin="40">
 			<TextBlock Text="Search"
 					   Margin="0,0,0,20"
@@ -158,6 +161,7 @@
 			</StackPanel>
 
 			<ScrollViewer Grid.Row="2"
+						  VerticalScrollBarVisibility="Hidden"
 						  Margin="0,10,0,0">
 				<ItemsControl Items="{Binding AnimeList}"
 							  Name="IcSearch">
