--- a/Tengu/Views/DownloadControl.axaml
+++ b/Tengu/Views/DownloadControl.axaml
@@ -77,12 +77,62 @@
 							</StackPanel>
 
 							<Button Background="Transparent"
-									BorderThickness="0"
+									BorderThickness="1"
+									CornerRadius="0"
+									Foreground="{DynamicResource SystemFillColorCritical}"
 									Margin="0"
 									HorizontalAlignment="Right"
 									Padding="0"
-									Content="X"
-									Grid.Column="1" />
+									Grid.Column="1">
+								<icons:MaterialIcon Kind="Remove" />
+							</Button>
+
+							<TextBlock Text="100%"
+									   HorizontalAlignment="Right"
+									   Grid.Column="1"
+									   Grid.Row="1"/>
+
+						</Grid>
+
+						<ProgressBar Value="100"
+									 Margin="0,5,0,0"
+									 Grid.Row="1"/>
+					</Grid>
+
+					<Grid RowDefinitions="*,Auto">
+						<Grid ColumnDefinitions="*,auto"
+							  RowDefinitions="*,*">
+
+							<TextBlock Text="Title"
+									   ToolTip.Tip="Title"
+									   FontSize="15"
+									   TextWrapping="Wrap"
+									   FontWeight="Medium"/>
+
+							<StackPanel Orientation="Horizontal"
+										Grid.Row="1"
+										Spacing="5">
+								<TextBlock Text="Episode"
+										   Opacity=".5"
+										   FontSize="13"/>
+								<TextBlock Text="·"
+										   Opacity=".5"
+										   FontSize="13"/>
+								<TextBlock Text="Host"
+										   Opacity=".5"
+										   FontSize="13"/>
+							</StackPanel>
+
+							<Button Background="Transparent"
+									BorderThickness="1"
+									CornerRadius="0"
+									Foreground="{DynamicResource SystemFillColorCritical}"
+									Margin="0"
+									HorizontalAlignment="Right"
+									Padding="0"
+									Grid.Column="1">
+								<icons:MaterialIcon Kind="Remove" />
+							</Button>
 
 							<TextBlock Text="100%"
 									   Grid.Column="1"
@@ -94,6 +144,49 @@
 									 Margin="0,5,0,0"
 									 Grid.Row="1"/>
 					</Grid>
+
+					<ItemsControl>
+						<ItemsControl.ItemTemplate>
+							<DataTemplate>
+								<Grid RowDefinitions="*,Auto">
+									<Grid ColumnDefinitions="*,Auto">
+										<StackPanel Orientation="Horizontal"
+													Spacing="5">
+											<TextBlock Text="Title"
+													   ToolTip.Tip="Title"
+													   FontSize="13"
+													   TextWrapping="NoWrap"
+													   FontWeight="Medium"/>
+											<TextBlock Text="Episode"
+														   Opacity=".5"
+														   FontSize="13"/>
+											<TextBlock Text="·"
+													   Opacity=".5"
+													   FontSize="13"/>
+											<TextBlock Text="Host"
+													   Opacity=".5"
+													   FontSize="13"/>
+										</StackPanel>
+
+										<Button Background="Transparent"
+												BorderThickness="1"
+												CornerRadius="0"
+												Foreground="{DynamicResource SystemFillColorCritical}"
+												Margin="0"
+												HorizontalAlignment="Right"
+												Padding="0"
+												Grid.Column="1">
+											<icons:MaterialIcon Kind="Remove" />
+										</Button>
+									</Grid>
+
+									<ProgressBar Value="0"
+												 Margin="0,5,0,0"
+												 Grid.Row="1"/>
+								</Grid>
+							</DataTemplate>
+						</ItemsControl.ItemTemplate>
+					</ItemsControl>
 				</StackPanel>
 			</Grid>
 
